# ZK-STARK-AUTH

./: .env.example  .gitignore  README.md  SEPOLIA_BENCHMARK_RUNBOOK.md  TECHNICAL_OVERVIEW.md  requirements.txt
benchmark/: compare.py  compare_application_auth.py  compare_availability.py
contracts/: ApplicationAuthBenchmark.sol
contracts/verifiers/: README.md  RiscZeroWrappedVerifierAdapter.sol
risc0/: README.md
risc0/host/: Cargo.toml
risc0/host/src/: main.rs
risc0/methods/guest/: Cargo.toml
risc0/methods/guest/src/: main.rs
scripts/: cia_availability_benchmark.py  cia_confidentiality_demo.py  cia_confidentiality_negative_identity_commitment_demo.py  cia_integrity_demo.py  common.py  ecdsa_onchain_demo.py  offchain_storage.py  stark_offchain_demo.py  stark_wrapped_onchain_demo.py
