[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.5" }
risc0-ethereum-contracts = { version = "^3.0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
